test/should-pass/pass/dummy-include/project.rep
{
  'srcs' => [
    'exe-main.cc',
  ],
  'libs' => [
  ],
  'name' => 'exe-cc',
}
