test/should-fail/method-param-name-klass-run/project.rep
{
  'srcs' => [
    'exe-main.dk',
  ],
  'libs' => [
  ],
  'name' => 'exe',
}
